--- a/index.html
+++ b/index.html
@@ -1,70 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Klint</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
-    />
-    <meta name="description" content="Use Viewer to start building new applications or easily embed Cesium into existing applications.">
-    <meta name="cesium-sandcastle-labels" content="Beginner, Showcases">
-    <title>Cesium Demo</title>
-    <script type="text/javascript" src="../Sandcastle-header.js"></script>
-    <script
-      type="text/javascript"
-      src="../CesiumUnminified/Cesium.js"
-      
-    ></script>
 
-  </head>
-  <body
-    class="sandcastle-loading"
-    data-sandcastle-bucket="bucket-requirejs.html"
-  >
-<style>
-  @import url(../templates/bucket.css);
-</style>
-<div id="cesiumContainer" class="fullSize"></div>
-<div id="loadingOverlay">
-  <h1>Loading...</h1>
-</div>
-<div id="toolbar"></div>
-<script id="cesium_sandcastle_script">
-function startup(Cesium) {
-    'use strict';
-//Sandcastle_Begin
-// Grant CesiumJS access to your ion assets
-Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJhOWI1MzI2MS00YThmLTQ4YjItYTdhMi1hN2JiZWUyNmNiNGIiLCJpZCI6NDU0MjcsImlhdCI6MTYxNTA0NzQwOH0.M-umi5Nd0qZIrca3dUikPuRX3u9pPT5FktTrUHIh7wY";
+<head>
+  <meta charset="utf-8">
+  <title>Klint</title>
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.79.1/Build/Cesium/Cesium.js"></script>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.79.1/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+</head>
 
-var viewer = new Cesium.Viewer("cesiumContainer", {
-  terrainProvider: new Cesium.CesiumTerrainProvider({
-    url: Cesium.IonResource.fromAssetId(362972),
-  }),
-  imageryProvider: new Cesium.MapboxImageryProvider({
-        mapId: 'mapbox.satellite',
-        accessToken: 'pk.eyJ1IjoiYWFsYXNzbyIsImEiOiJja21ndTcxcWMwMTA2MnZrNWFpMXFpczRzIn0.ujkdl32nnJyQc482-mwGJw'
-    }),
-});
+<body style="margin: 0; padding: 0; height: 100vh; width: 100vw">
+  <div id="cesiumContainer" style="width: 100%; height:100%; margin: 0; padding: 0; "></div>
+  <script>
+    function startup(Cesium) {
+      'use strict';
+      Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiJhOWI1MzI2MS00YThmLTQ4YjItYTdhMi1hN2JiZWUyNmNiNGIiLCJpZCI6NDU0MjcsImlhdCI6MTYxNTA0NzQwOH0.M-umi5Nd0qZIrca3dUikPuRX3u9pPT5FktTrUHIh7wY";
 
-var tileset = viewer.scene.primitives.add(
-  new Cesium.Cesium3DTileset({
-    url: Cesium.IonResource.fromAssetId(362724),
-  })
-);
+      var viewer = new Cesium.Viewer("cesiumContainer", {
+        terrainProvider: new Cesium.CesiumTerrainProvider({
+          url: Cesium.IonResource.fromAssetId(375086),
+        }),
+        imageryProvider: new Cesium.MapboxImageryProvider({
+          mapId: 'mapbox.satellite',
+          accessToken: 'pk.eyJ1IjoiYWFsYXNzbyIsImEiOiJja21ndTcxcWMwMTA2MnZrNWFpMXFpczRzIn0.ujkdl32nnJyQc482-mwGJw'
+        }),
+      });
 
-tileset.readyPromise
-  .then(function () {
-    viewer.zoomTo(tileset);
-  });
-//Sandcastle_End
-    Sandcastle.finishedLoading();
-}
-if (typeof Cesium !== 'undefined') {
-    window.startupCalled = true;
-    startup(Cesium);
-}
-</script>
+      var tileset = viewer.scene.primitives.add(
+        new Cesium.Cesium3DTileset({
+          url: Cesium.IonResource.fromAssetId(362724),
+        })
+      );
+
+      tileset.readyPromise
+        .then(function () {
+          viewer.zoomTo(tileset);
+        });
+    }
+    if (typeof Cesium !== 'undefined') {
+      window.startupCalled = true;
+      startup(Cesium);
+    }
+  </script>
 </body>
+
 </html>
+
+
+
